# Attacking-by-Aligning

./: .gitignore  README.md  requirements.txt
mmdet/: detr_r50_8xb2-150e_coco.py  faster-rcnn_r50_fpn_ms-3x_coco.py
source/: coco_oda.py  coco_oga.py  oda_asr_coco_mmdet.py  oda_asr_coco_yolov8.py  oga_asr_coco_mmdet.py  oga_asr_coco_yolov8.py
source/utils/: coco2voc.py  convert.py  evaluation.py  oda_utils.py  oga_utils.py  os_help_func.py
yolov3/: .gitignore  DetectUtils.py  asr_plt.py  detect.py  oda_asr_bdd100k.py  oda_asr_coco.py  oda_asr_voc.py  oga_asr_bdd100k.py  oga_asr_coco.py  oga_asr_voc.py  setup.cfg  train.py  train_asr_evl.py  val.py
yolov3/data/: coco_poison.yaml
yolov3/data/hyps/: hyp.scratch.yaml
yolov3/data/scripts/: download_weights.sh
yolov3/models/: common.py  experimental.py  tf.py  yolo.py  yolov3.yaml
yolov3/utils/: __init__.py  activations.py  augmentations.py  autoanchor.py  autobatch.py  callbacks.py  datasets.py  downloads.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py
yolov3/utils/loggers/: __init__.py
yolov3/utils/loggers/wandb/: sweep.yaml  wandb_utils.py
yolov8/YOLOv8/yolov8n/: args.yaml  events.out.tfevents.1685097976.mhcpu1.cse.ust.hk.23651.0
yolov8/YOLOv8/yolov8x/: args.yaml  events.out.tfevents.1685098444.mhcpu1.cse.ust.hk.26541.0
yolov8/YOLOv8/yolov8x2/: args.yaml  events.out.tfevents.1685098480.mhcpu1.cse.ust.hk.27039.0
yolov8/data/: coco_clean.yaml
