[metadata]

[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --doctest-modules
    --durations=25
    --color=yes


[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2

format = pylint

ignore =
    E731  # Do not assign a lambda expression, use a def
    F405
    E402
    F841
    E741
    F821
    E722
    F401
    W504
    E127
    W504
    E231
    E501
    F403
    E302
    F541


[isort]
line_length = 120
multi_line_output = 0
